# bmi-cxx

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  bmi.hxx  bmicxx.pc.cmake
.bmi/: api.yaml  info.yaml
.github/workflows/: test.yml
